--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 This is an augmented reality solar system project to enhance learning for children age 4 to 6 years old on planets in our solar system. The system is written using Flash with ARToolkit. This system has also used Papervision 3D to provide more stunning 3D graphics by enhancing Flash graphics. 
 
-Requirements for to run the system are as below:
-1)The system can run on all browsers provided it is embedded with Flash Plugin.
+Requirements to run the system are as below:
+1)This system can run on all browsers provided it is embedded with Flash Plugin.
 2)A normal webcam with adequate of lighting.
 3)A marker is require to allow the 3D objects to be pop-up. The marker can be printed from solar2.docx file. 
 
